--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
             non_contextual_creation: true
     show-sql: false
   flyway:
-    enabled: false
+    enabled: true
     baseline-on-migrate: true
     baseline-version: 0
   mvc:
