--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>ru.studentsplatform</groupId>
         <artifactId>backend</artifactId>
+        <groupId>ru.studentsplatform</groupId>
         <version>1.0.0</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>service</artifactId>
+    <artifactId>notification</artifactId>
 
     <dependencies>
-        <!-- Modules App -->
-        <dependency>
-            <groupId>ru.studentsplatform</groupId>
-            <artifactId>domain</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>ru.studentsplatform</groupId>
             <artifactId>system</artifactId>
@@ -35,5 +30,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Spring Email -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
+
 </project>
