--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>domain</module>
         <module>service</module>
         <module>migration</module>
+        <module>notification</module>
     </modules>
 
     <parent>
